//============================================================================//
//                                                                            //
//            Copyright Â© 2015 - 2022 Sandpolis Software Foundation           //
//                                                                            //
//  This source file is subject to the terms of the Mozilla Public License    //
//  version 2. You may not use this file except in compliance with the MPLv2. //
//                                                                            //
//============================================================================//
syntax = "proto3";

package core.protocol;

option java_package = "org.s7s.core.protocol";
option optimize_for = SPEED;

message RQ_STStream {
    enum Direction {
        UPSTREAM = 0;
        DOWNSTREAM = 1;
        BIDIRECTIONAL = 2;
    }

    int32 stream_id = 1;

    bool permanent = 2;

    string oid = 3;
    repeated string whitelist = 4;

    Direction direction = 5;
    int32 update_period = 6;
}

enum RS_STStream {
    ST_STREAM_OK = 0;
    ST_STREAM_INVALID = 1;
    ST_STREAM_FAILED = 2;
}

message EV_STStreamData {

    enum ValueType {
        BYTES = 0;
        BYTES_ARRAY = 1;
        STRING = 2;
        STRING_ARRAY = 3;
        INTEGER = 4;
        INTEGER_ARRAY = 5;
        LONG = 6;
        LONG_ARRAY = 7;
        BOOLEAN = 8;
        BOOLEAN_ARRAY = 9;
        DOUBLE = 10;
        DOUBLE_ARRAY = 11;
        OS_TYPE = 12;
        OS_TYPE_ARRAY = 13;
        INSTANCE_TYPE = 14;
        INSTANCE_TYPE_ARRAY = 15;
        INSTANCE_FLAVOR = 16;
        INSTANCE_FLAVOR_ARRAY = 17;
    }

    // The object's relative OID
    string oid = 1;

    // Whether the object corresponding to the OID was removed
    bool removed = 2;

    // The attribute value type
    ValueType value_type = 3;

    // The timestamp associated with the attribute value
    int64 timestamp = 4;

    bytes           bytes          = 5;
    repeated bytes  bytes_array    = 6;
    string          string         = 7;
    repeated string string_array   = 8;
    int32           integer        = 9;
    repeated int32  integer_array  = 10;
    int64           long           = 11;
    repeated int64  long_array     = 12;
    bool            boolean        = 13;
    repeated bool   boolean_array  = 14;
    double          double         = 15;
    repeated double double_array   = 16;
}

message RQ_StopStream {

    // The stream ID of the stream to stop
    int32 id = 1;
}

enum RS_StopStream {
    STOP_STREAM_OK = 0;
    STOP_STREAM_INVALID = 1;
}